# YOLOX

demo/TensorRT/cpp/: CMakeLists.txt  logging.h  yolox.cpp
exps/ouxt-2022-yolox-nano/: ouxt-2022-yolox_nano.py
tools/: ouxt_demo.py
